# redmine-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  agent_dev.md  alembic.ini  basic_playbook.md  docker-compose.yml  justfile  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
docs/: agent-workflow.md  architecture.md  data-model.md  evaluation.md  ui-design-system.md
evals/: CHANGELOG.md  baseline_metrics.v1.json  mock_dataset_manifest.v1.json  queries.example.jsonl  results.baseline.v1.jsonl  results.example.jsonl  supporthub_golden_v1.jsonl
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
migrations/: env.py
prompts/: ask_answer_schema.json  ask_system.md  extract_properties.md  extract_properties_schema_v1.json  extract_properties_v1.md  retrieval_planner_schema.json  retrieval_planner_system.md
scripts/: bootstrap.sh  check.sh  dev.sh  mock-redmine.sh
tasks/: 01-mock-redmine-api.md  02-ingestion-foundation.md  03-chunking-and-fts.md  04-embeddings-and-hybrid-retrieval.md  05-ask-endpoint-and-citations.md  06-deterministic-properties-and-metrics.md  07-llm-structured-extraction.md  08-evaluation-and-regression-gates.md  09-production-hardening-and-ops.md  10-release-cutover-and-go-live.md  11-ollama-provider-and-local-llm-runtime.md  12-llm-grounded-answer-synthesis.md  13-llm-query-understanding-and-retrieval-planner.md  14-llm-safety-guardrails-and-output-validation.md  15-llm-observability-cost-and-fallback-control.md  16-ui-foundation-and-design-system.md  17-ui-sync-and-ingestion-control-center.md  18-ui-ask-workbench-and-citation-explorer.md  README.md  (+2 more)
tests/: test_ask.py  (+24 more)
(+115 files in other folders)
